--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 </head>
 
 <body>
-    <button class="btn settings" id="btn settings"><i class="fas fa-cog"></i></button>
+    <button class="btn-settings" id="btn-settings"><i class="fas fa-cog"></i></button>
     <div class="settings-container">
         <form id="settings-form">
             <div>
-                <label for="difficulty">Difficulty</label>
-                <select name="difficulty" id="difficulty">
+                <label for="difficulty">Difficulty:</label>
+                <select name="difficulty" id="difficulty" class="difficulty">
                     <option value="easy">Easy</option>
                     <option value="medium">Medium</option>
                     <option value="hard">Hard</option>
