Initial variables. Change word, update score and time. Time countdown

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         <input type="text" id="text" autocomplete="off" placeholder="Type the word here...">
 
-        <p class="time-container">Time left: <span id="time">10</span></p>
+        <p class="time-container">Time left: <span id="time">10s</span></p>
         <p class="score-container">Score: <span id="score">0</span></p>
 
         <div id="summary-container" class="summary-container"></div>
